crates/jni/tests/ui/native_method/fail/wrong_parameter_type.stderr
warning: unused import: `jint`
 --> tests/ui/native_method/fail/wrong_parameter_type.rs:4:16
  |
4 | use jni::sys::{jint, jlong};
  |                ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/ui/native_method/fail/wrong_parameter_type.rs:20:16
   |
20 |         sig = (value: jint) -> void,
   |                ^^^^^ expected `i64`, found `i32`
21 |         fn = my_method_impl
   |              -------------- arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/native_method/fail/wrong_parameter_type.rs:9:4
   |
 9 | fn my_method_impl<'local>(
   |    ^^^^^^^^^^^^^^
...
12 |     _value: jlong, // Wrong! Should be jint
   |     -------------
help: you can convert an `i32` to an `i64`
   |
20 |         sig = (value.into(): jint) -> void,
   |                     +++++++
